--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   display: flex;
 }
 header{
-height: 60px;
+height: 90px;
 
 }
 
@@ -18,8 +18,9 @@ header>nav{
 display: flex;
 height: 100%;
 width: 100%;
-background-color: lightblue;
 align-items: center;
+justify-content: center;
+   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.06);
 }
 
 
@@ -31,28 +32,23 @@ nav > img {
 nav>h1{
     margin-top: 15px;
 }
-main{
-    height: 350px;
-    width: 450px;
-overflow: hidden;
-border-color: black;
-border-width: 300px;
-margin-top: 20px;
+form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+form>input{
+    border-radius: 6px;
+    height:35px ;
+width: 300px;
+}
+form> button{
+    
+    height: 35px;
+    width: 140px;
+background-color: black;
+border-radius: 20px;
+color: white;
 margin-left: 20px;
-}
-section{
-    height: 100%;
-    width: 100%;
-}
-section >iframe{
-    width: 100%;
-    height: 60%;
-    border-radius: 10px;
-}
-section>article{
-width: 100%;
-height: 40%;
-}
-article>p{
-    margin-left: 7px;
 }
